--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.3",
+    "antd": "^4.16.13",
+    "moment": "^2.29.1",
+    "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3"
+    "eslint": "7.32.0"
   }
 }
